# dw-mcp

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  setup.py  setup.sh
src/dw_mcp/: __init__.py  config_loader.py  connections.py  dialects.py  safety.py  server.py  startup_checks.py
tests/: test_config_loader.py  test_connections.py  test_dialects.py  test_multi_instance.py  test_safety.py  test_startup_checks.py
